modules/cli/src/test/resources/good/syntax/disamb/imports/pack1/Import04b.scr
module good.syntax.disamb.imports.pack1.Import04b;


global protocol Proto2(role C, role D)
{
	Import04b() from C to D;
}

