modules/cli/src/test/resources/bad/syntax/disamb/headerparamdecllist/HeaderParamDeclList03.scr
module bad.syntax.disamb.headerparamdecllist.HeaderParamDeclList03;


global protocol Foo(role A, role A)
{
	1() from A to A;
}
